[package]
name = "gavle"
version = "0.1.0"
authors = ["Matheus Branco Borella <dark.ryu.550@gmail.com>"]
edition = "2021"
repository = "https://github.com/DarkRyu550/gavle"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"
description = "OpenGL wrapper crate modeled after wgpu."

[dependencies]
log       = "0.4"
glow      = "0.11"
thiserror = "1"
smallvec  = "1"
tinyvec   = "1"
arrayvec  = "0.6"
bitflags  = "1"
generational-arena = "0.2"

image     = { version = "0.23", optional = true, default-features = false }
bytemuck  = { version = "1", optional = true }

[features]
mipmap-generation = ["image", "bytemuck"]